cmake_minimum_required(VERSION 2.8)
project( template_matching )
SET(COMPILE_DEFINITIONS -Werror)
find_package(OpenCV REQUIRED)
#link_directories(/home/pi/pierre/libfacerec-0.04)
include_directories(/opt/vc/userland/host_applications/linux/libs/bcm_host/include)
include_directories(/opt/vc/userland/interface/vcos)
include_directories(/opt/vc/userland)
include_directories(/opt/vc/userland/interface/vcos/pthreads)
include_directories(/opt/vc/userland/interface/vmcs_host/linux)
add_executable(template_matching RaspiCamControl.c RaspiCLI.c RaspiPreview.c camcv_vid.cpp)
target_link_libraries(template_matching /opt/vc/lib/libmmal_core.so /opt/vc/lib/libmmal_util.so /opt/vc/lib/libmmal_vc_client.so /opt/vc/lib/libvcos.so /opt/vc/lib/libbcm_host.so ${OpenCV_LIBS})

